--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "eureka",
+  "name": "oreka",
   "version": "0.0.0",
   "description": "",
   "main": "index.js",
@@ -8,7 +8,7 @@
   },
   "keywords": [],
   "author": "Namlook",
-  "license": "BSD-2-Clause",
+  "license": "MIT",
   "devDependencies": {
     "chai": "~1.8.1",
     "mocha": "~1.14.0",
